[gd_scene load_steps=4 format=3 uid="uid://wt6l7qsp3y24"]

[ext_resource type="Script" path="res://playground.gd" id="1_qinjp"]
[ext_resource type="PackedScene" uid="uid://bq0tfw61wpnlg" path="res://basic_bars_example.tscn" id="1_xtp4g"]
[ext_resource type="PackedScene" uid="uid://dkts8f5dp5wl6" path="res://circular_example.tscn" id="2_5im2u"]

[node name="Playground" type="Node2D"]
script = ExtResource("1_qinjp")

[node name="BasicBarsExample" parent="." node_paths=PackedStringArray("audio_player") instance=ExtResource("1_xtp4g")]
audio_player = NodePath("../AudioStreamPlayer")

[node name="CircularExample" parent="." node_paths=PackedStringArray("audio_player") instance=ExtResource("2_5im2u")]
visible = false
audio_player = NodePath("../AudioStreamPlayer")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Visualizer"

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
toggle_mode = true
text = "Switch"

[node name="Play" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 595.0
offset_top = -1.0
offset_right = 636.0
offset_bottom = 30.0
grow_horizontal = 0
text = "Play"

[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
